objects/HealthCloudGA__EhrVirtualDevice__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>EHR Virtual Device</label>
    <nameField>
        <displayFormat>VDev-{0}</displayFormat>
        <label>EHR Virtual Device ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Virtual Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>